--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -5,3 +5,17 @@ html, body {
 a, label, input[type="checkbox"], input[type="radio"] {
 	cursor: pointer;
 }
+a:hover {
+	text-decoration: none;
+}
+
+#body-wrapper>header {
+	
+}
+#main-frame {
+	padding: 10px;
+	margin-top: 20px;
+}
+#body-wrapper>footer {
+	margin-top: 20px;
+}
