--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -13,7 +13,7 @@ a:hover {
 #body-wrapper>header {
 	
 }
-#main-frame {
+#frame {
 	padding: 10px;
 	margin-top: 20px;
 }
@@ -33,9 +33,9 @@ a:hover {
     background: url(../../images/octicons-bg.png) center repeat;
     background-color: #222;
 }
-#nav li.active > a {
-    background-color: rgba(30, 130, 200, 0.3);
+#nav li > a {
+    font-size: 1.1em;
 }
 #nav li.active > a {
-    background-color: rgba(30, 130, 200, 0.3);
+    background-color: rgba(30, 130, 200, 0.4);
 }
