--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -10,32 +10,13 @@ a:hover {
 	text-decoration: none;
 }
 
-#body-wrapper>header {
-	
-}
 #frame {
 	padding: 10px;
+    margin: auto;
 	margin-top: 20px;
+    max-width: 500px;
 }
 #body-wrapper>footer {
 	margin-top: 20px;
 }
 
-#nav-wrapper {
-    height: 50px;
-    margin-bottom: 20px;
-}
-.navbar-inverse .navbar-brand,
-.navbar-inverse .navbar-nav li a {
-    color: #dddddd;
-}
-#nav {
-    background: url(../../images/octicons-bg.png) center repeat;
-    background-color: #222;
-}
-#nav li > a {
-    font-size: 1.1em;
-}
-#nav li.active > a {
-    background-color: rgba(30, 130, 200, 0.4);
-}
