--- a/public/lib/css/style.css
+++ b/public/lib/css/style.css
@@ -1,4 +1,8 @@
 
+@import url("bootstrap.min.css");
+@import url("bootstrap-theme.min.css");
+@import url("font-awesome.min.css");
+
 body {
     background-color: #fafafa;
     font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
