--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,11 +123,24 @@ textarea {
 #list-viewvote #words > li {
 	padding: 4px;
 }
-#list-viewvote .square {
+#list-viewvote #count {
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+#list-viewvote #count > li {
+    padding: 4px;
+}
+#list-viewvote .square-word {
 	width: 24px;
 	height: 24px;
 	margin-right: 14px;
 	display: inline-block;
+}
+#list-viewvote .square-count {
+    width: 24px;
+    height: 24px;
+    margin-right: 14px;
+    display: inline-block;
 }
 #list-viewvote .word {
 	vertical-align: top;
