--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,13 @@ a:hover {
 .navbar-brand {
 	cursor: default;
 }
+.navbar-brand > img {
+	height: 26px;
+	width: auto;
+	margin-right: 4px;
+	margin-top: -3px;
+	margin-bottom: -3px;
+}
 .navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav > li > a {
 	color: #ddd;
