--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,24 @@
 @import url("../bower_components/bootstrap/dist/css/bootstrap-theme.min.css");
 @import url("../bower_components/sco.js/css/scojs.css");
 
-body {
+html, body {
 	background-color: #fafafa;
 	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+	height: 100%;
+}
+#main {
+	min-height: 100%;
+	height: auto;
+	margin: 0 auto -80px;
+	padding: 0 0 80px;
+}
+footer {
+	background-color: #f5f5f5;
+	margin-top: 20px;
+	height: 60px;
+}
+footer p {
+	margin: 20px 0;
 }
 h1 {
 	margin-bottom: 20px;
@@ -32,9 +47,6 @@ a:hover {
 
 .navbar-default .navbar-nav > .active > a {
 	background-color: #F4F4F4;
-}
-.navbar-brand {
-	cursor: default;
 }
 .navbar-brand > img {
 	height: 26px;
