enlarge the `awardlist`

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,6 +184,8 @@ textarea {
 	margin-left: 40px;
 	margin-right: 40px;
 	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 /* vote list */
